// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateCompareSummaryMarkdown generates md output for passed, failed and noop 1`] = `
"
<!--
DO NOT MODIFY
app_id: optic-comment-3UsoJCz_Z0SpGLo5Vjw6o
commit_sha: 123
-->
### APIs Changed

<table>
<thead>
<tr>
<th>API</th>
<th>Changes</th>
<th>Rules</th>


<th></th>
</tr>
</thead>
<tbody>
<tr>
<td>

completed

</td>
<td>

2 operations added

  


</td>
<td>

ℹ️ No automated checks have run

</td>





<td>

[View report](https://app.useoptic.com/changelog)

</td>
</tr>
</tbody>
</table>

### Errors running optic

<table>
<thead>
<tr>
<th>API</th>
<th>Error</th>
</tr>
</thead>
<tbody>
<tr>
<td>failed</td>
<td>

\`\`\`
blahblahblah
\`\`\`

</td>
</tr>
</tbody>
</table>


Summary of API changes for commit (123)

1 API had no changes."
`;

exports[`generateCompareSummaryMarkdown generates md output for passed, failed and noop for verbose 1`] = `
"
<!--
DO NOT MODIFY
app_id: optic-comment-3UsoJCz_Z0SpGLo5Vjw6o
commit_sha: 123
-->
### APIs Changed

<table>
<thead>
<tr>
<th>API</th>
<th>Changes</th>
<th>Rules</th>


<th></th>
</tr>
</thead>
<tbody>
<tr>
<td>

completed

</td>
<td>

2 operations added

  \`GET /api\` (added)
\`POST /api\` (added)


</td>
<td>

ℹ️ No automated checks have run

</td>





<td>

[View report](https://app.useoptic.com/changelog)

</td>
</tr>
</tbody>
</table>

### Errors running optic

<table>
<thead>
<tr>
<th>API</th>
<th>Error</th>
</tr>
</thead>
<tbody>
<tr>
<td>failed</td>
<td>

\`\`\`
blahblahblah
\`\`\`

</td>
</tr>
</tbody>
</table>


Summary of API changes for commit (123)

1 API had no changes."
`;

exports[`generateCompareSummaryMarkdown only failed 1`] = `
"
<!--
DO NOT MODIFY
app_id: optic-comment-3UsoJCz_Z0SpGLo5Vjw6o
commit_sha: 123
-->

### Errors running optic

<table>
<thead>
<tr>
<th>API</th>
<th>Error</th>
</tr>
</thead>
<tbody>
<tr>
<td>failed</td>
<td>

\`\`\`
blahblahblah
\`\`\`

</td>
</tr>
</tbody>
</table>


Summary of API changes for commit (123)

"
`;

exports[`generateCompareSummaryMarkdown only noop 1`] = `
"
<!--
DO NOT MODIFY
app_id: optic-comment-3UsoJCz_Z0SpGLo5Vjw6o
commit_sha: 123
-->



Summary of API changes for commit (123)

1 API had no changes."
`;

exports[`generateCompareSummaryMarkdown only passed 1`] = `
"
<!--
DO NOT MODIFY
app_id: optic-comment-3UsoJCz_Z0SpGLo5Vjw6o
commit_sha: 123
-->
### APIs Changed

<table>
<thead>
<tr>
<th>API</th>
<th>Changes</th>
<th>Rules</th>


<th></th>
</tr>
</thead>
<tbody>
<tr>
<td>

completed

</td>
<td>

2 operations added

  


</td>
<td>

ℹ️ No automated checks have run

</td>





<td>

[View report](https://app.useoptic.com/changelog)

</td>
</tr>
</tbody>
</table>



Summary of API changes for commit (123)

"
`;

exports[`generateCompareSummaryMarkdown when run without optic cloud 1`] = `
"
<!--
DO NOT MODIFY
app_id: optic-comment-3UsoJCz_Z0SpGLo5Vjw6o
commit_sha: 123
-->
### APIs Changed

<table>
<thead>
<tr>
<th>API</th>
<th>Changes</th>
<th>Rules</th>


<th></th>
</tr>
</thead>
<tbody>
<tr>
<td>

no-optic-cloud

</td>
<td>

2 operations added

  


</td>
<td>

ℹ️ No automated checks have run

</td>





<td>



</td>
</tr>
</tbody>
</table>



Summary of API changes for commit (123)

"
`;
